syntax = "proto3";
package genproto;

option go_package = "genproto/setting_service";

message UserCreatedResponse {
    string id = 1;
}
message UserGetReq {
    string id = 1;
}
message User {
    string id = 1;
    string name = 2;
    string password = 3;
    string login = 4;
    string image_url = 5;
    string link = 6;
}
message GetAllUsersRequest {
    string name = 1;
    uint32 page = 2;
    uint32 limit = 3;
}
message GetAllUsersResponse {
    uint32 count = 1;
    repeated User users = 2;
}
message UserExistsRequest {
    string login = 1;
    string password = 2;
}

message UserExistsResponse {
    bool exist = 1;
    string id = 2;
}
